syntax = "proto3";

package notification;

service Notification {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse) {}
}

message NotificationRequest {
  string template_code = 1;
  repeated Parameter parameters = 2;
}

message NotificationResponse {
  string result = 1;
}

message Parameter {
  string parameter_name = 1;
  string parameter_value = 2;
}
